en/docs/api-manager/4.0.0/design/create-api/create-rest-api/create-a-rest-api.md
---
title: "Create a REST API"
description: "Create a REST API by linking a backend implementation to the API Publisher to manage its lifecycle, security, and subscriptions."
canonical_url: https://wso2.com/api-platform/docs/api-manager/4.0.0/design/create-api/create-rest-api/create-a-rest-api/
md_url: https://wso2.com/api-platform/docs/api-manager/4.0.0/design/create-api/create-rest-api/create-a-rest-api.md
tags:
  - api-manager
  - design
  - create-api
  - create-rest-api
author: WSO2 API Platform Documentation Team
last_updated: 2026-08-20
content_type: "how-to"
---

# Create a REST API

**API creation** is the process of linking an existing backend API implementation to the [API Publisher](../../../get-started/apim-architecture.md#api-publisher), so that you can manage and monitor the [API's lifecycle](../../lifecycle-management/api-lifecycle.md), documentation, security, community, and subscriptions. Alternatively, you can provide the API implementation in-line in the [API Publisher](../../../get-started/apim-architecture.md#api-publisher) itself.

Follow the instructions below to create a REST API using the basic flow:

1. Sign in to the WSO2 API Publisher.

    `https://<hostname>:9443/publisher` 
   
    Example: `https://localhost:9443/publisher`

    <html><div class="admonition note">
      <p class="admonition-title">Note</p>
      <p>The <b>Create API</b> button will only appear for a user who has the <code>creator</code> role permission.</p>
      </div>
    </html>

2. Select **REST API** from the options available.

    [![Select REST API](../../../assets/img/learn/select-rest-api.png){: style="width:90%"}](../../../assets/img/learn/select-rest-api.png)

3.  Click **Start from Scratch**.

    [![Select Start from Scratch](../../../assets/img/learn/create-a-rest-api.png){: style="width:30%"}](../../../assets/img/learn/create-a-rest-api.png)

4.  Enter API details. 
    
     <table><colgroup> <col/> <col/> <col/> </colgroup><tbody><tr><th colspan="2" >Field</th><th >Sample value</th></tr><tr><td colspan="2" class="confluenceTd">Name</td><td class="confluenceTd">PizzaShack</td></tr><tr><td colspan="2" class="confluenceTd">Version</td><td colspan="1" class="confluenceTd">1.0.0</td></tr><tr><td colspan="2" class="confluenceTd">Context</td><td class="confluenceTd"><div class="content-wrapper"><p><code>/pizzashack</code></p><div><div class="confluence-information-macro-body"><p>The API context is used by the Gateway to identify the API. Therefore, the API context must be unique. This context is the API's root context when invoking the API through the Gateway.</p></div><div class="confluence-information-macro confluence-information-macro-tip"><span class="aui-icon aui-icon-small aui-iconfont-approve confluence-information-macro-icon"></span><div class="confluence-information-macro-body"><p>You can define the API's version as a parameter of its context by adding the <code>{version}</code> into the context. For example, <code>{version}/pizzashack</code>. The API Manager assigns the actual version of the API to the <code>{version}</code> parameter internally. For example, <code>https://localhost:8243/1.0.0/pizzashack</code>. Note that the version appears before the context, allowing you to group your APIs based on the versions.</p></div></div></div></div></td></tr><tr><td colspan="2" class="confluenceTd">Endpoint</td><td colspan="1" class="confluenceTd"><p><a class="external-link" href="http://ws.cdyne.com/phoneverify/phoneverify.asmx" rel="nofollow">https://localhost:9443/am/sample/pizzashack/v1/api/</a></p><p>The endpoint that you add is automatically added as the production and sandbox endpoints.</p></td></tr></tbody></table>

     <div class="admonition note">
     <p class="admonition-title">Note</p>
     <p>The <b>Create & Publish</b> option will only appear when a user who has <code>publisher</code> permission adds the details for the <b>Endpoint</b> which is an optional field.</p>
     </div>
     
      [![Create an API page](../../../assets/img/learn/create-rest-api-form.png){: style="width:70%"}](../../../assets/img/learn/create-rest-api-form.png)

5.  Click **Create** to create the API.
    
    ??? note "If you click Create & Publish"
        If you click **Create & Publish**, WSO2 API Manager will automatically create a revision for the API, deploy the revision on the Gateway, and also publish your API to the Developer Portal.
        [![API overview page](../../../assets/img/learn/rest-api-create-publish.png)](../../../assets/img/learn/rest-api-create-publish.png)

    The overview page of the newly created API appears. 
    
    [![API overview page](../../../assets/img/learn/overviewpage-rest-api.png)](../../../assets/img/learn/overviewpage-rest-api.png)

6. Go to **Develop**, **Portal Configurations**, and click **Basic Info**.

     <a href="../../../../assets/img/learn/click-basic-info.png">
     <img src="../../../../assets/img/learn/click-basic-info.png" width="20%"></a>

     1. Configure the API design configurations.

        [![Design configurations](../../../assets/img/learn/design-configuration.png){: style="width:80%"}](../../../assets/img/learn/design-configuration.png)

         <html><div class="admonition note">
         <p class="admonition-title">Note</p>
         <p>By default, **All** users who have `creator` permission are allowed **<a href='../../../advanced-topics/enable-publisher-access-control-in-api-publisher-portal.md'>Publisher Access Control</a>** and public **<a href='../../../advanced-topics/control-api-visibility-and-subscription-availability-in-developer-portal.md'> 
         Developer Portal visibility</a>**.</p>
         <p>
         </div>
         </html>

     2. Add a tag and press enter.
   
         Let's add a tag named **pizza**.

         <html>
         <div class="admonition info">
         <p class="admonition-title">Info</p>
         <p>Tags can be used to filter out APIs matching specific search criteria. It is a good practice to add tags that explain the functionality and purpose of the API so that subscribers can search for APIs based on the tags.</p>
         </div>
         </html>

     3. Optionally, select **Yes** for the **Make this the Default Version** option.
   
        ??? note "What happens when an API is the default version?"
            -  The **API will be available in the Gateway without a version specified** in the Production and Sandbox URLs.
            -  If required, **you can create a new version of an API and set it as the default version**.              
                - This allows the same resources to be invoked in the client applications without changing the API Gateway URL.
                - This allows users to seamlessly switch to the new API version without doing any changes to the invocation URL.
            -  If required, **you can create new versions of an API with changes, while keeping the previous version as the default API**.
                - This allows the existing client applications to be invoked without the client having to change the URLs. 
                - This allows existing users to still use the old API because that is the default version.
                - Users need to explicitly call the respective version that corresponds to the new API to be able to invoke it. 
                - This provides the ability to run the new API in parallel to the old API; while, also allowing some new users to try out the new API.

     4. Click **Save**.

7. Configure the runtime configurations.

    1. Click **Runtime**, which is under the **API Configurations** section.

         Transport Level Security defines the transport protocol on which the API is exposed.  

         [![Transport-level security](../../../assets/img/learn/runtime-configs.png)](../../../assets/img/learn/runtime-configs.png)

    2. If you wish to limit the API availability to only one transport (e.g., HTTPS), deselect the **Transport Level Security** checkbox.
           
         Both HTTP and HTTPS transports are selected by default.

8. Configure the resources.

     By default, the API will have five resources with `/*` as the URL pattern.

     1. Click **Resources**, which is under the **API Configurations** section.
        
        [![Resources overview page](../../../assets/img/learn/resources-overview-page.png)](../../../assets/img/learn/resources-overview-page.png)

     2. Modify the resources as follows and click **Save** to update the resources.

          1. Click delete, as shown below, to remove all the existing resources.

              [![Delete all existing resources](../../../assets/img/learn/delete-all-existing-resources.png)](../../../assets/img/learn/delete-all-existing-resources.png)

          2. Select an appropriate **HTTP Verb** from the dropdown and click **(+)** to add a new resource.
         
             [![Add new resource](../../../assets/img/learn/add-new-resource.png)](../../../assets/img/learn/add-new-resource.png)
      
             The newly added resource is displayed as follows.
         
             [![Newly added resource](../../../assets/img/learn/newly-added-resource.png)](../../../assets/img/learn/newly-added-resource.png)

          3. Expand the created **GET** operation to add details for the **Summary and Description** and **Operation governance** sections.
             
             1. Add a summary and description for the resource.
             2. Update the Security settings as required.
                - Turn the security setting **off** if you want to **make a certain operation of the API non-secured** and accessible without passing an access token.
                - To make the **whole API non-secured** and fully accessible without an access token, turn  the security setting **off** in **all the operations** of the API.
             
                [![Invoke API without Access Token](../../../assets/img/learn/invoke-api-without-access-token.png)](../../../assets/img/learn/invoke-api-without-access-token.png)
             
             3. Add resource parameters if required using the **Parameters** section.

                [![Adding params to resources](../../../assets/img/learn/adding-params-to-resources.png)](../../../assets/img/learn/adding-params-to-resources.png)

                You can define the following parameter types based on the resource parameters that you add.

                | **Parameter Type**                          | **Description**                                                                                                                                                                                     |
                |-----------------------------------------|-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
                | `query`| Contains the fields added as part of the invocation URL, which contains the data to be used to call the backend service.                                                                             |
                | `header`| Contains the case-sensitive names followed by a colon (:) and then by its value that carries additional information with the request, which defines the operating parameters of the transaction. |
                | `cookie` | Operations can also pass parameters in the Cookie header, as `Cookie: name=value`. Multiple cookie parameters are sent in the same header, separated by a semicolon and space.                                                                                            |
                | `body`| An arbitrary amount of data of any type is sent with a POST message.                                                                                                                                |

9.  Optionally, view the API definition.

     Click **API Definition**. 
     
     The OpenAPI Specification (a.k.a Swagger definition) for the PizzaShack API appears.

     [![REST API definition](../../../assets/img/learn/api-definition-rest.png)](../../../assets/img/learn/api-definition-rest.png)

Now, you have successfully created and configured a REST API. Next, [deploy the API](../../../deploy-and-publish/deploy-on-gateway/deploy-api/deploy-an-api.md), [test the API](test-a-rest-api.md), and finally [publish the API](../../../deploy-and-publish/publish-on-dev-portal/publish-an-api.md).

## See Also

Learn more on the concepts that you need to know when creating a REST API:

-   [Endpoints](../../endpoints/endpoint-types.md)
-   [API Security](../../api-security/api-authentication/secure-apis-using-oauth2-tokens.md)
-   [Rate Limiting](../../rate-limiting/introducing-throttling-use-cases.md)
-   [Life Cycle Management](../../lifecycle-management/api-lifecycle.md)
-   [API Monetization](../../api-monetization/monetizing-an-api.md)
-   [API Visibility](../../advanced-topics/control-api-visibility-and-subscription-availability-in-developer-portal.md)
-   [API Documentation](../../api-documentation/add-api-documentation.md)
-   [Custom Properties](../adding-custom-properties-to-apis.md)
